apps/base/downloads/qbittorrent/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`qbittorrent.${CLUSTER_DOMAIN}`)
      services:
        - name: qbittorrent
          port: 8080
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
    - kind: Rule
      match: Host(`qbittorrent.${CLUSTER_DOMAIN}`)  && PathPrefix(`/api`)
      services:
        - name: qbittorrent
          port: 8080
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
  tls:
    certResolver: cloudflare
